
====
NEWS
====

- 1.6.0 -

  * Separated spawn-fcgi from lighttpd